# PR_Reviewer

./: .gitignore  LICENSE  README.md  README_CN.md  REQUIREMENTS.md  config.example.toml  pyproject.toml
docs/: plan.md
src/pr_reviewer/: __init__.py  __main__.py  main.py
src/pr_reviewer/analysis/: dependency_graph.py  import_parser.py  language_detector.py
src/pr_reviewer/analysis/linter/: models.py  registry.py  runner.py
src/pr_reviewer/config/: settings.py
src/pr_reviewer/github/: client.py  diff_parser.py  models.py
src/pr_reviewer/llm/: client.py  context_manager.py  prompt_builder.py  response_parser.py  translator.py
src/pr_reviewer/report/: formatter.py  generator.py  models.py  renderer.py
src/pr_reviewer/report/templates/: report.html.j2  report.md.j2
src/pr_reviewer/utils/: git.py
tests/: conftest.py  test_response_parser.py
