[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pr-reviewer"
version = "0.1.0"
description = "AI-powered PR code review assistant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "PyGithub>=2.3",
    "anthropic>=0.39",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
pr-review = "pr_reviewer.main:app"

[tool.setuptools.packages.find]
where = ["src"]
